--- a/02-sg/sg_rules.yaml
+++ b/02-sg/sg_rules.yaml
@@ -2,15 +2,11 @@
   sg:
   - expense-dev-db
   - expense-dev-backend
+  - expense-dev-app-alb
   - expense-dev-frontend
+  - expense-dev-web-alb
   - expense-dev-bastion
-  - expense-dev-app-alb #backend alb
   - expense-dev-vpn
-  expense-dev-vpn:
-  - name: vpn_public
-    desc: vpn accepting connections from public
-    source: public
-    port: 943, 443, 22, 1194
   db:
   - name: db_backend
     desc: db accepting connections from backend
@@ -24,11 +20,6 @@
     desc: db accepting connections from vpn
     source: vpn
     port: 3306
-  app_alb:
-  - name: app_alb_vpn
-    desc: app alb accepting connections from VPN
-    source: vpn
-    port: 80
   backend:
   - name: backend_app_alb
     desc: backend accepting connections from app alb
@@ -46,15 +37,42 @@
     desc: backend accepting connections from VPN
     source: vpn
     port: 8080
+  app_alb:
+  - name: app_alb_vpn
+    desc: app alb accepting connections from VPN
+    source: vpn
+    port: 80
+  - name: app_alb_frontend
+    desc: app alb accepting connections from frontend instances
+    source: frontend
+    port: 80
+  - name: app_alb_bastion
+    desc: app alb accepting connections from bastion instances
+    source: frontend
+    port: 80
   frontend:
-  - name: frontend_public
-    desc: frontend accepting connections from public
-    source: public
+  - name: frontend_web_alb
+    desc: frontend accepting connections from web ALB
+    source: web_alb
     port: 80
   - name: frontend_bastion
     desc: frontend accepting connections from bastion
     source: bastion
     port: 22
+  - name: frontend_vpn
+    desc: frontend accepting connections from vpn
+    source: vpn
+    port: 22
+  web_alb:
+  - name: web_alb_public
+    desc: web alb accepting connections from public
+    source: public
+    port: 80
+  vpn:
+  - name: vpn_public
+    desc: vpn accepting connections from public
+    source: public
+    port: 943, 443, 22, 1194
   bastion:
   - name: bastion_public
     desc: bastion accepting connections from public
